--- a/static/variantrules.html
+++ b/static/variantrules.html
@@ -17,185 +17,25 @@
 	<link rel="shortcut icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
 	<link rel="manifest" href="../manifest.json">
 	<meta name="theme-color" content="#03dac6">
-	<script type='text/javascript' src='../js/darkmode.js'></script>
+	<script src="../node_modules/@webcomponents/webcomponentsjs/custom-elements-es5-adapter.js"></script>
+	<script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+	<script type="module" src=" ../components/dnd-layout.js"> </script>
+	<script type="module" src=" ../components/dnd-selection-list.js"> </script>
 </head>
 
 <body>
 
-	<header class="mdc-top-app-bar mdc-top-app-bar--fixed mdc-theme--primary-bg mdc-theme--on-primary">
-		<div class="mdc-top-app-bar__row">
-			<div class="breadcrumbs mdc-theme--on-primary">
-				<div class="container breadcrumbs__list">
-					<div class="breadcrumbs__crumb"><a href="./index.html">Rules</a></div>
-					<div class="breadcrumbs__crumb breadcrumbs__no_caret"><a href="javascript:blankHash()">Variant Rules</a></div>
-					<div class="breadcrumbs__crumb breadcrumbs__last"></div>
-				</div>
-			</div>
-			<div class="nav-button">
-				<button class="material-icons mdc-top-app-bar__navigation-icon mdc-theme--on-primary hidden-desktop-up margin-left_small">menu</button>
-				<a href='index.html'><div class="logo logo-white light-only"></div></a>
-				<a href='index.html'><div class="logo dark-only"></div></a>
-				<a href='index.html'><span class="mdc-top-app-bar__title mdc-theme--on-primary typography_mono hidden-tablet-down">5e Tools</span></a>
-			</div>
-		</div>
-	</header>
-
-	<aside class="mdc-drawer mdc-drawer--modal mdc-theme--surface">
-		<div class="mdc-drawer__content">
-			<nav class="mdc-list">
-				<div class="mdc-drawer__header hidden-desktop-up">
-					<a href='index.html'><h3 class="mdc-drawer__title mdc-theme--on-surface typography_mono"><div class="logo margin-right_small"></div>5e Tools</h3>
-					<h6 class="mdc-drawer__subtitle mdc-theme--text-secondary-on-background margin-top_small typography_mono">A D&amp;D Players Companion</h6></a>
-				</div>
-
-				<a class="mdc-list-item mdc-theme--on-surface" href="#">
-					<label class="darkmode-label" for="dark-mode-switch">Dark Mode</label>
-					<div class="mdc-switch mdc-list-item__meta">
-						<div class="mdc-switch__track"></div>
-						<div class="mdc-switch__thumb-underlay">
-							<div class="mdc-switch__thumb">
-								<input type="checkbox" id="dark-mode-switch" class="mdc-switch__native-control" role="switch">
-							</div>
-						</div>
-					</div>
-				</a>
-
-				<hr class="mdc-list-divider">
-				<a class="mdc-list-item mdc-theme--on-surface" href="rules.html" tabindex="0">
-					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">library_books</i>
-					<span class="mdc-list-item__text">Rules</span>
-				</a>
-				<a class="mdc-list-item mdc-theme--on-surface list-item--activated" href="variantrules.html">
-					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">description</i>
-					
-					<span class="mdc-list-item__text">Variant Rules</span>
-				</a>
-
-				<hr class="mdc-list-divider">
-				<h6 class="mdc-list-group__subheader mdc-theme--on-surface">Player Options</h6>
-				<a class="mdc-list-item mdc-theme--on-surface" href="classes.html">
-					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">class</i>
-					<span class="mdc-list-item__text">Classes</span>
-				</a>
-				<a class="mdc-list-item mdc-theme--on-surface" href="backgrounds.html">
-					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">public</i>
-					<span class="mdc-list-item__text">Backgrounds</span>
-				</a>
-				<a class="mdc-list-item mdc-theme--on-surface" href="feats.html">
-					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">fitness_center</i>
-					<span class="mdc-list-item__text">Feats</span>
-				</a>
-				<a class="mdc-list-item mdc-theme--on-surface" href="races.html">
-					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">face</i>
-					<span class="mdc-list-item__text">Races</span>
-				</a>
-
-				<hr class="mdc-list-divider">
-				<h6 class="mdc-list-group__subheader mdc-theme--on-surface">References</h6>
-				<a class="mdc-list-item mdc-theme--on-surface" href="spells.html">
-					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">flash_on</i>
-					<span class="mdc-list-item__text">Spells</span>
-				</a>
-				<a class="mdc-list-item mdc-theme--on-surface" href="conditions.html">
-					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">sentiment_very_dissatisfied</i>
-					<span class="mdc-list-item__text">Conditions</span>
-				</a>
-				<a class="mdc-list-item mdc-theme--on-surface" href="items.html">
-					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">restaurant</i>
-					<span class="mdc-list-item__text">Items</span>
-				</a>
-				<a class="mdc-list-item mdc-theme--on-surface" href="rewards.html">
-					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">toll</i>
-					<span class="mdc-list-item__text">Other Rewards</span>
-				</a>
-				<a class="mdc-list-item mdc-theme--on-surface" href="bestiary.html">
-					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">warning</i>
-					<span class="mdc-list-item__text">Bestiary</span>
-				</a>
-				<a class="mdc-list-item mdc-theme--on-surface" href="psionics.html">
-					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">record_voice_over</i>
-					<span class="mdc-list-item__text">Psionics</span>
-				</a>
-				<a class="mdc-list-item mdc-theme--on-surface" href="cults.html">
-					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">group</i>
-					<span class="mdc-list-item__text">Cults</span>
-				</a>
-
-				<hr class="mdc-list-divider">
-				<h6 class="mdc-list-group__subheader mdc-theme--on-surface">Tools</h6>
-				<a class="mdc-list-item mdc-theme--on-surface" href="dice.html">
-					<i class="material-icons mdc-list-item__graphic mdc-theme--on-surface" aria-hidden="true">casino</i>
-					<span class="mdc-list-item__text">Dice Roller</span>
-				</a>
-				<span class='version mdc-typography--caption'>v1.2.1</span>
-				
-			</nav>
-		</div>
-	</aside>
-
-	<div class="mdc-drawer-scrim"></div>
-
-	<div class="main mdc-top-app-bar--fixed-adjust mdc-typography--body1 mdc-theme--background mdc-theme--text-primary-on-background">
-		<div class="container">
-			<h1 class="page-title mdc-typography--headline2">Variant Rules</h1>
-
-
-			<div class="main-spinner spinner">Loading...</div>
-
-			<button class="mdc-icon-button close-item material-icons">close</button>
-
-			<div class="stats-wrapper  margin-bottom_large">
-				<div class="text"></div>
-			</div>
-
-			<div id="listcontainer">
-				<div id="filter-search-input-group" class="filter-group">
-					<div class="mdc-text-field mdc-text-field--outlined mdc-text-field--with-leading-icon">
-  						<i class="material-icons mdc-text-field__icon mdc-theme--primary">search</i>
-						<input type="search" id="search-field" class="mdc-text-field__input search" >
-						<div class="mdc-notched-outline">
-							<div class="mdc-notched-outline__leading"></div>
-							<div class="mdc-notched-outline__notch">
-								<label for="search-field" class="mdc-floating-label">Search</label>
-							</div>
-							<div class="mdc-notched-outline__trailing"></div>
-						</div>
-					</div>
-					<div class="filter-group--buttons">
-						<button class="mdc-button mdc-button--raised" id="reset">
-							<span class="mdc-button__label">Reset</span>
-						</button>
-					</div>
-				</div>
-
-				<div class="table-wrap mdc-elevation--z6">
-					<div class="table--scroll">
-						<table class="table">
-							<thead>
-								<tr class="table-row table-row--header">
-									<th class="sort" data-sort="name"><div class="table-cell">Name</div></th>
-									<th class="sort" data-sort="source"><div class="table-cell" style="width: 72px">Source</div></th>
-								</tr>
-							</thead>
-							<tbody class='list variantRules'></tbody> 
-						</table>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<script type="text/javascript" src="../lib/material-components-web.min.js"></script>
-	<script type="text/javascript" src="../lib/swipe.js"></script>
- 
-    <script type="text/javascript" src="../js/nav.js"></script>
-
-	<script type="text/javascript" src="../js/utils.js"></script>
-	<script type="text/javascript" src="../js/filter.js"></script>
-	<script type="text/javascript" src="../js/entryrender.js"></script>
-	<script type="text/javascript" src="../js/history.js"></script>
-	<script type="text/javascript" src="../js/variantrules.js"></script>
-	<script type="text/javascript" src="../lib/list.js"></script>
-	<script type="text/javascript" src="../lib/jquery.js"></script>
+	<dnd-layout title="Variant Rules">
+		<dnd-selection-list
+			enable-hash-routing
+			model-id="variantrules"
+			columns='[
+				{"id":"name","label":"Name"},
+				{"id":"source","label":"Source"},
+				{"id":"rules-search","label":"Rules","cssClass":"hidden"}
+			]'>
+		</dnd-selection-list>
+	</dnd-layout>
 </body>
+
 </html>
